--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
